--- a/openclaw-tools/Dockerfile
+++ b/openclaw-tools/Dockerfile
@@ -4,17 +4,25 @@ FROM ghcr.io/openclaw/openclaw:latest
 
 ARG ACLI_VERSION=1.3.13
 
+# The OpenClaw base image runs as a non-root user.
+# Switch to root for package installation, then drop back.
+USER root
+
 # Install Atlassian CLI (acli)
 # Ref: https://developer.atlassian.com/cloud/acli/
 RUN set -eux; \
+    mkdir -p /var/lib/apt/lists/partial; \
     apt-get update; \
     apt-get install -y --no-install-recommends ca-certificates curl unzip; \
     rm -rf /var/lib/apt/lists/*; \
-    curl -fsSL -o /tmp/acli.zip "https://acli.atlassian.com/linux/latest"; \
-    unzip -q /tmp/acli.zip -d /opt/acli; \
-    ln -sf /opt/acli/acli /usr/local/bin/acli; \
-    rm -f /tmp/acli.zip; \
-    acli version
+    curl -fsSL "https://acli.atlassian.com/install.sh" -o /tmp/acli-install.sh; \
+    chmod +x /tmp/acli-install.sh; \
+    /tmp/acli-install.sh -b /usr/local/bin; \
+    rm -f /tmp/acli-install.sh; \
+    (acli --version || acli -v || acli --help | head -20)
+
+# Return to the default user (if present). Many OpenClaw images use uid 1000.
+USER 1000
 
 # Default command
 CMD ["openclaw", "--help"]
