B-077: Add full CLI toolset to openclaw-tools golden image
Tools added: oc, kubectl, vault, helm, argocd, jq, yq, trivy,
gitleaks, python3+pip, cloudflared

Changes:
- Dockerfile: single-layer multi-arch install of all tools
- Workflow: multi-arch build (amd64+arm64), GHA cache, SHA tags
- README: updated tool inventory

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -31,10 +31,23 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5.7.0
+        with:
+          images: ghcr.io/rhels/openclaw-tools
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,prefix=
+
       - name: Build and push
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: ./openclaw-tools
           file: ./openclaw-tools/Dockerfile
           push: true
-          tags: ghcr.io/rhels/openclaw-tools:latest
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
